# itch

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
itch/: __init__.py  messages.py  parser.py
itch/ob/: entries.py
tests/: data.py  test_create_message.py  test_parser.py
